force-app/main/default/objects/User/fields/BypassApexTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassApexTriggers__c</fullName>
    <label>Bypass Apex Triggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP01</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
            <value>
                <fullName>BANNEDWORDS</fullName>
            </value>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>PPURCHASE</fullName>
            </value>
            <value>
                <fullName>PPURCHASE_AFTER</fullName>
            </value>
            <value>
                <fullName>ACCOUNT_MANUAL_CHANGE</fullName>
            </value>
            <value>
                <fullName>ACCOUNT_LASTMODIFIEDCOUNTRY</fullName>
            </value>
            <value>
                <fullName>TSK_AUTOSAVE</fullName>
            </value>
            <value>
                <fullName>PROSPECT</fullName>
            </value>
            <value>
                <fullName>NEWPROGRAM_AFTER</fullName>
            </value>
            <value>
                <fullName>PROGRAM_BEFOREINSERTUPDATE</fullName>
            </value>
            <value>
                <fullName>TSK_LASTCONTACTDATE</fullName>
            </value>
            <value>
                <fullName>EVT_LASTCONTACTDATE</fullName>
            </value>
            <value>
                <fullName>CASE_PROSPECTINFO</fullName>
            </value>
            <value>
                <fullName>C360_ACCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>