force-app/main/default/objects/User/fields/BypassVR__c.field-meta.xml
<CustomField>
    <fullName>BypassVR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>