force-app/main/default/objects/User/fields/cnx__Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_ID__c</fullName>
    <description>Agent id used in b+s Connects for Salesforce.</description>
    <label>Agent Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>