force-app/main/default/objects/User/fields/cnx__Agent_MobileAgent__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_MobileAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mobile Agent used in b+s Connects for Salesforce.</description>
    <label>Mobile Agent</label>
    <type>Checkbox</type>
</CustomField>