force-app/main/default/objects/User/fields/cnx__Agent_MobileMode__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_MobileMode__c</fullName>
    <description>Mobile Mode used in b+s Connects for Salesforce.</description>
    <label>Mobile Agent Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CALL_BY_CALL</fullName>
            </value>
            <value>
                <fullName>NAILED_CONNECTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>