force-app/main/default/objects/User/fields/cnx__Agent_MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_MobileNumber__c</fullName>
    <description>Mobile Number used in b+s Connects for Salesforce.</description>
    <label>Mobile Agent Dial Number</label>
    <type>Phone</type>
</CustomField>