force-app/main/default/objects/User/fields/cnx__Agent_Password__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Password__c</fullName>
    <label>obsolete</label>
    <length>32</length>
    <type>Text</type>
</CustomField>