force-app/main/default/objects/User/fields/cnx__Agent_PasswordEncrypted__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
    <description>Password encrypted used in b+s Connects for Salesforce.</description>
    <label>Agent Password</label>
    <length>127</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>