force-app/main/default/objects/User/fields/cnx__Agent_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Phone_Extension__c</fullName>
    <description>Agent phone extension used in b+s Connects for Salesforce.</description>
    <label>deprecated</label>
    <type>Phone</type>
</CustomField>