force-app/main/default/objects/User/fields/cnx__Agent_Phone_Extension_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Phone_Extension_v2__c</fullName>
    <description>Agent phone extension used in b+s Connects for Salesforce.</description>
    <label>Agent Extension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>