force-app/main/default/objects/User/fields/cnx__Agent_SpeedDialNumbers__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
    <description>A list of names and numbers that will be added to the speed dial list.</description>
    <label>Speed Dial Numbers</label>
    <length>1060</length>
    <type>LongTextArea</type>
</CustomField>