force-app/main/default/objects/User/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>The default user currency</description>
    <inlineHelpText>The default user currency</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>