force-app/main/default/objects/User/fields/DREAMId__c.field-meta.xml
<CustomField>
    <fullName>DREAMId__c</fullName>
    <externalId>true</externalId>
    <label>DREAM Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>