force-app/main/default/objects/User/fields/EAI_saleServices__c.field-meta.xml
<CustomField>
    <fullName>EAI_saleServices__c</fullName>
    <formula>$Permission.EAI_saleServices</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAI_saleServices</label>
    <type>Checkbox</type>
</CustomField>