force-app/main/default/objects/User/fields/Edit_User_Stores__c.field-meta.xml
<CustomField>
    <fullName>Edit_User_Stores__c</fullName>
    <formula>HYPERLINK(&quot;/apex/EditUserStores?id=&quot; &amp; Id, &quot;User Stores&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>