force-app/main/default/objects/User/fields/FirstName2__c.field-meta.xml
<CustomField>
    <fullName>FirstName2__c</fullName>
    <formula>Contact.Firstname2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstName2</label>
    <type>Text</type>
</CustomField>