force-app/main/default/objects/User/fields/HasAgreedWWVoiceTermsConditions__c.field-meta.xml
<CustomField>
    <fullName>HasAgreedWWVoiceTermsConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Agreed WW Voice Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>