force-app/main/default/objects/User/fields/HasVerifiedEmail__c.field-meta.xml
<CustomField>
    <fullName>HasVerifiedEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Email</label>
    <type>Checkbox</type>
</CustomField>