force-app/main/default/objects/User/fields/IconVersion__c.field-meta.xml
<CustomField>
    <fullName>IconVersion__c</fullName>
    <label>Icon Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>