force-app/main/default/objects/User/fields/Is_Identity_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Identity_User__c</fullName>
    <formula>Profile.Name = &apos;Identity User&apos; &amp;&amp; Profile.UserLicense.Name =&apos;External Identity&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Identity User</label>
    <type>Checkbox</type>
</CustomField>