force-app/main/default/objects/User/fields/Is_Store_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Store_User__c</fullName>
    <formula>AND( Profile.Name &lt;&gt;  &apos;Identity User&apos;  , OR (LOWER(LEFT(FirstName, 5))==&apos;store&apos;   , LOWER(LEFT(LastName, 6))==&apos;store &apos;))</formula>
    <label>Is Store User</label>
    <type>Checkbox</type>
</CustomField>