force-app/main/default/objects/User/fields/Is_Tracked_Logs__c.field-meta.xml
<CustomField>
    <fullName>Is_Tracked_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tracked Logs</label>
    <type>Checkbox</type>
</CustomField>