force-app/main/default/objects/User/fields/IsTechnicalUser__c.field-meta.xml
<CustomField>
    <fullName>IsTechnicalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client Visibility development - true if user is a technical user used as owner for unassigned clients</description>
    <label>Is Technical User</label>
    <type>Checkbox</type>
</CustomField>