force-app/main/default/objects/User/fields/LastName2__c.field-meta.xml
<CustomField>
    <fullName>LastName2__c</fullName>
    <formula>Contact.Lastname2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName2</label>
    <type>Text</type>
</CustomField>