force-app/main/default/objects/User/fields/MGMT_ZONE_SUB_LEVEL1__c.field-meta.xml
<CustomField>
    <fullName>MGMT_ZONE_SUB_LEVEL1__c</fullName>
    <description>Contains the code/translation for the first sub-level of management hierarchy</description>
    <label>MGMT ZONE SUB LEVEL1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MANAGEMENT_ZONE_LEVEL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>151</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>1231</fullName>
            </value>
            <value>
                <fullName>1071</fullName>
            </value>
            <value>
                <fullName>1111</fullName>
            </value>
            <value>
                <fullName>1151</fullName>
            </value>
            <value>
                <fullName>1191</fullName>
            </value>
            <value>
                <fullName>1271</fullName>
            </value>
            <value>
                <fullName>1311</fullName>
            </value>
            <value>
                <fullName>1351</fullName>
            </value>
            <value>
                <fullName>1391</fullName>
            </value>
            <value>
                <fullName>391</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>