force-app/main/default/objects/User/fields/MGMT_ZONE_SUB_LEVEL2__c.field-meta.xml
<CustomField>
    <fullName>MGMT_ZONE_SUB_LEVEL2__c</fullName>
    <description>Contains the code/translation for the second sub-level of management hierarchy</description>
    <label>MGMT ZONE SUB LEVEL2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MGMT_ZONE_SUB_LEVEL1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>53</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>88</fullName>
            </value>
            <value>
                <fullName>97</fullName>
            </value>
            <value>
                <fullName>98</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>179</fullName>
            </value>
            <value>
                <fullName>219</fullName>
            </value>
            <value>
                <fullName>259</fullName>
            </value>
            <value>
                <fullName>299</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>419</fullName>
            </value>
            <value>
                <fullName>2379</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>