force-app/main/default/objects/User/fields/MGMT_ZONE_SUB_LEVEL3__c.field-meta.xml
<CustomField>
    <fullName>MGMT_ZONE_SUB_LEVEL3__c</fullName>
    <description>Contains the code/translation for the third sub-level of management hierarchy</description>
    <label>MGMT ZONE SUB LEVEL3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MGMT_ZONE_SUB_LEVEL2__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10056</fullName>
            </value>
            <value>
                <fullName>1016</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>10216</fullName>
            </value>
            <value>
                <fullName>10296</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>10616</fullName>
            </value>
            <value>
                <fullName>10856</fullName>
            </value>
            <value>
                <fullName>109</fullName>
            </value>
            <value>
                <fullName>10936</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>11016</fullName>
            </value>
            <value>
                <fullName>11176</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>11256</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>11336</fullName>
            </value>
            <value>
                <fullName>11416</fullName>
            </value>
            <value>
                <fullName>116</fullName>
            </value>
            <value>
                <fullName>11656</fullName>
            </value>
            <value>
                <fullName>11736</fullName>
            </value>
            <value>
                <fullName>1176</fullName>
            </value>
            <value>
                <fullName>118</fullName>
            </value>
            <value>
                <fullName>11896</fullName>
            </value>
            <value>
                <fullName>119</fullName>
            </value>
            <value>
                <fullName>11976</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>12056</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>