force-app/main/default/objects/User/fields/MIY_Tester__c.field-meta.xml
<CustomField>
    <fullName>MIY_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if a user is a tester on Now Yours side (he/she will be able to see categories hidden from others)</description>
    <label>Now Yours Tester</label>
    <type>Checkbox</type>
</CustomField>