force-app/main/default/objects/User/fields/My_Favorites__c.field-meta.xml
<CustomField>
    <fullName>My_Favorites__c</fullName>
    <description>My Favorits sku Catalog Desktop</description>
    <label>My Favorites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>