force-app/main/default/objects/User/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <description>Checks whether the connected user&apos;s store and the record user&apos;s store are the same</description>
    <formula>TEXT( DefaultStore__c ) = TEXT($User.DefaultStore__c )</formula>
    <inlineHelpText>Checks whether the connected user&apos;s store and the record user&apos;s store are the same</inlineHelpText>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>