force-app/main/default/objects/User/fields/My_Stores_Lists__c.field-meta.xml
<CustomField>
    <fullName>My_Stores_Lists__c</fullName>
    <label>My Stores Lists</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>