force-app/main/default/objects/User/fields/OriginalEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalEmployeeNumber__c</fullName>
    <label>Original Employee Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>