force-app/main/default/objects/User/fields/Other_apps__c.field-meta.xml
<CustomField>
    <fullName>Other_apps__c</fullName>
    <label>Other apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>Client Voice</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Icon Star</fullName>
            </value>
            <value>
                <fullName>Icon CSC</fullName>
            </value>
            <value>
                <fullName>Make It Yours</fullName>
                <label>Now Yours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>