force-app/main/default/objects/User/fields/Primary_App__c.field-meta.xml
<CustomField>
    <fullName>Primary_App__c</fullName>
    <description>Indicates the main LV app the user can access</description>
    <label>Primary App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>Client Voice</fullName>
            </value>
            <value>
                <fullName>Special Order</fullName>
            </value>
            <value>
                <fullName>Icon Star</fullName>
            </value>
            <value>
                <fullName>Icon CSC</fullName>
            </value>
            <value>
                <fullName>Make It Yours</fullName>
                <label>Now Yours</label>
            </value>
            <value>
                <fullName>Client 360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>