force-app/main/default/objects/User/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <formula>Profile.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfileId</label>
    <type>Text</type>
</CustomField>