force-app/main/default/objects/User/fields/RMS_ID__c.field-meta.xml
<CustomField>
    <fullName>RMS_ID__c</fullName>
    <description>User RMS ID</description>
    <label>RMS ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>