force-app/main/default/objects/User/fields/SPO_Session_State__c.field-meta.xml
<CustomField>
    <fullName>SPO_Session_State__c</fullName>
    <label>Session State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>