force-app/main/default/objects/User/fields/TECH_DefaultStoreName__c.field-meta.xml
<CustomField>
    <fullName>TECH_DefaultStoreName__c</fullName>
    <formula>TEXT( DefaultStore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Default Store Name</label>
    <type>Text</type>
</CustomField>