force-app/main/default/objects/User/fields/TECH_Email__c.field-meta.xml
<CustomField>
    <fullName>TECH_Email__c</fullName>
    <label>TECH Email</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>