force-app/main/default/objects/User/fields/TECH_IsManager__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsManager__c</fullName>
    <description>Used in ICON ios to define if a user is a manger (show My Store Top, show My team features..)</description>
    <formula>Profile.Name = &apos;ICON_SA Manager&apos; 
||  Profile.Name = &apos;ICON_Corporate&apos;
||  Profile.Name = &apos;ICONiCS_SA_Manager&apos;
||  Profile.Name = &apos;ICON_LV Administrator&apos;
||  Profile.Name = &apos;ICON_STAR_Corporate&apos;
|| Profile.Name = &apos;ICON_SAManager_EVERYWHERE&apos;
||  ProfileId    = &apos;00ei0000000Uq8U&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Is Manager</label>
    <type>Checkbox</type>
</CustomField>