force-app/main/default/objects/User/fields/TECH_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>TECH_MobilePhone__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TECH MobilePhone</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>