force-app/main/default/objects/User/fields/TECH_TeamUsersIds__c.field-meta.xml
<CustomField>
    <fullName>TECH_TeamUsersIds__c</fullName>
    <description>In this field we will store team users ids separated by a semi colon (;).
This field is populated from the ios app. A manager can add or remove team members in his team.</description>
    <label>TECH Team Users Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>