force-app/main/default/objects/User/fields/TECH_User_Stores__c.field-meta.xml
<CustomField>
    <fullName>TECH_User_Stores__c</fullName>
    <description>Holds comma separated list of Store codes</description>
    <label>User Stores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>