force-app/main/default/objects/User/fields/Tracking_Identity_User__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Identity_User__c</fullName>
    <description>Permet de charger via un workflow tous les changements effectuer sur un user identity</description>
    <label>Tracking Identity User</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>