force-app/main/default/objects/User/fields/Tracking_Level__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Level__c</fullName>
    <label>Tracking_Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
                <default>true</default>
                <label>Identified</label>
            </value>
            <value>
                <fullName>Unidentifed</fullName>
            </value>
            <value>
                <fullName>Notracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>