force-app/main/default/objects/User/fields/User_Stores__c.field-meta.xml
<CustomField>
    <fullName>User_Stores__c</fullName>
    <description>Holds comma separated list of user stores</description>
    <label>User Stores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>