force-app/main/default/objects/User/fields/User_Stores_Formula__c.field-meta.xml
<CustomField>
    <fullName>User_Stores_Formula__c</fullName>
    <formula>User_Stores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Stores</label>
    <type>Text</type>
</CustomField>