force-app/main/default/objects/User/fields/WWEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>WWEmployeeNumber__c</fullName>
    <externalId>true</externalId>
    <label>WWEmployeeNumber</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>