force-app/main/default/objects/User/validationRules/EMAIL_or_MOBILE.validationRule-meta.xml
<ValidationRule>
    <fullName>EMAIL_or_MOBILE</fullName>
    <active>true</active>
    <errorConditionFormula>Profile.Name == &apos;Identity User&apos; &amp;&amp; TECH_MobilePhone__c == &apos;&apos; &amp;&amp; TECH_Email__c == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>TECH_Email__c</errorDisplayField>
    <errorMessage>REQUIRED_FIELD_MISSING</errorMessage>
</ValidationRule>