force-app/main/default/objects/User/validationRules/Technical_User_no_Modify.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_User_no_Modify</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, 	IsTechnicalUser__c = true)</errorConditionFormula>
    <errorMessage>You are not allowed to change this technical user,</errorMessage>
</ValidationRule>