force-app/main/default/objects/User/validationRules/User_Activation_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Activation_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT($User.BypassVR__c)) &amp;&amp; (ISCHANGED( IsActive ) &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;LV_Interface_Datastage&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Identity Profile&apos; &amp;&amp; $Profile.Name &lt;&gt;&apos;ICON_Interface DREAM&apos; &amp;&amp; $Profile.Name &lt;&gt;&apos;ICON_LV_Country_Admin&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;LV Pass integration&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Identity User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Twist Profile&apos;)) &amp;&amp; NOT ($Permission.Idol_custom_permission) &amp;&amp; (NOT ($Permission.ICX_OOB) || ($Permission.ICX_OOB &amp;&amp; IsActive &lt;&gt; true))</errorConditionFormula>
    <errorMessage>You are not allowed to active/desactive a user. Please open a ticket to Contact IS.</errorMessage>
</ValidationRule>