force-app/main/default/objects/User/validationRules/User_Creation_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Creation_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT($User.BypassVR__c)) &amp;&amp; (ISNEW() &amp;&amp; ($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;LV_Interface_Datastage&apos; &amp;&amp; $Profile.Name &lt;&gt;&apos;ICON_Interface DREAM&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;LV Pass integration&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Identity User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Identity Profile&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Twist Profile&apos; &amp;&amp; NOT ($Permission.Idol_custom_permission) ))</errorConditionFormula>
    <errorMessage>You are not allowed to create a new user. Please open a ticket to Contact IS.</errorMessage>
</ValidationRule>